--- a/Módulo 3 git/ex001/fundo006.html
+++ b/Módulo 3 git/ex001/fundo006.html
@@ -12,11 +12,12 @@
             background-repeat: no-repeat;
             background-size: cover;
             height: 100vh;
+            background-attachment: fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +28,8 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi at sint voluptate obcaecati amet. Maxime repellat reiciendis ratione, in beatae nesciunt iste. Ad cumque neque saepe illo doloribus nisi obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dolor perspiciatis quia, odio amet, at veniam reiciendis maxime omnis nostrum voluptatem reprehenderit officia esse, quasi aliquid architecto ex a hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, autem quae. Ipsam voluptas laborum odio tempora eveniet iusto obcaecati ratione, qui nemo dolore provident minus repudiandae accusamus dicta, blanditiis repellat.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi at sint voluptate obcaecati amet. Maxime repellat reiciendis ratione, in beatae nesciunt iste. Ad cumque neque saepe illo doloribus nisi obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum dolor perspiciatis quia, odio amet, at veniam reiciendis maxime omnis nostrum voluptatem reprehenderit officia esse, quasi aliquid architecto ex a hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, autem quae. Ipsam voluptas laborum odio tempora eveniet iusto obcaecati ratione, qui nemo dolore provident minus repudiandae accusamus dicta, blanditiis repellat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi possimus, fugiat deserunt repellendus dolores aliquid. Eveniet, dolorem qui! Dolore tempore fugiat aliquid, harum quis praesentium similique omnis consectetur quo facilis? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium iusto possimus. Voluptatum libero, assumenda corporis veniam veritatis consequatur odio vero culpa aliquam et eveniet optio deserunt, at quod sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci saepe aperiam facilis nesciunt voluptatem commodi ducimus corrupti excepturi, harum id, reprehenderit laudantium culpa maiores nihil, sequi voluptatum ipsam nam reiciendis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea totam officiis, doloremque dicta dolores iste illo dolore non perferendis molestiae ducimus doloribus ut impedit. Recusandae debitis voluptatem ducimus harum voluptatibus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ut ipsa eveniet earum, cumque exercitationem. Laborum molestiae recusandae culpa, vitae dolorem consequatur commodi amet repellendus. Tempore impedit illo enim expedita? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam doloremque, hic et reiciendis, sed minima corporis officiis incidunt consequuntur maxime aliquid? Impedit a dicta molestias sit amet magnam assumenda accusantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, repellendus vitae. Nam, magnam? Blanditiis nemo est excepturi nulla optio obcaecati ex, officia laboriosam sunt aut aliquam architecto, natus fugit consectetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum deserunt numquam, nulla eos, laboriosam, soluta recusandae dolore corrupti ullam pariatur nemo? Nihil suscipit quasi repellendus. Ipsum id deserunt suscipit unde.
+        </p>
     </main>
 </body>
 </html>
