--- a/Lívia/Formulário.html
+++ b/Lívia/Formulário.html
@@ -26,6 +26,9 @@ body {
 
 .conteudo {
     text-align: center;
+    border: 2px solid #F1DFDF;
+    margin:50px;
+    padding: 20px;
 }
 
 .conteudo h1 {
@@ -60,7 +63,8 @@ label {
     border: none;
     border-radius: 20px;
     font-size: 1.5em;
-    width: 20vw;
+    width: 280px;
+    margin-bottom: 20px;
 }
 
 #nome {
