--- a/Lívia/index.html
+++ b/Lívia/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declaração</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
+    <header>
+        <h1>Bem Vindaa!</h1>
+        <a href="index.html"><span class="material-symbols-outlined"><abbr style="text-decoration: none;" title="Início">home</abbr></span></a>
+        <a href="página2.html"><span class="material-symbols-outlined"><abbr style="text-decoration: none;" title="texto">book_2</abbr></span></a>
+        <a href="pag3.html"><span class="material-symbols-outlined"><abbr style="text-decoration: none;" title="poema">library_books</abbr></span></a>
+    </header>
     <div>
         <h1>OIIII MEU AMOR!!!!</h1> <br>
         <h3>Criei esse site para você. Vou tentar criar algo bem divertido</h3> <br>
         <p>Eu fiz algo pensando em vccc, pq eu quero ver vc muito felizinha, espero que vc goste muito.</p> <br>
-        <a href="página2.html">Entra Aqui</a>
-        <a href="pag3.html">Aqui Também</a>
+        <a href="Formulário.html">login</a>
     </div>
 </body>
 </html>
