--- a/Lívia/pag3.html
+++ b/Lívia/pag3.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declaração</title>
     <link rel="stylesheet" href="estilos/pag2.css">
+     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
    
 </head>
+<header>
+        <h1>Bem Vindaa!</h1>
+        <a href="index.html"><span class="material-symbols-outlined">home</abbr></span></a>
+        <a href="página2.html"><span class="material-symbols-outlined">book_2</abbr></span></a>
+        <a href="pag3.html"><span class="material-symbols-outlined">library_books</abbr></span></a>
+    </header>
 <body>
     <div>
         <h1>Poeminha</h1>
@@ -31,7 +38,7 @@
         que veja em nós, lado a lado, <br>
         o eterno se fazendo flor. <br>
 
-        <p><a href="index.html">Volte</a></p>
+        <p><a id="a1" href="index.html">Volte</a></p>
     </p>
     </div>
 
