--- a/Lívia/página2.html
+++ b/Lívia/página2.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declaração</title>
     <link rel="stylesheet" href="estilos/pag2.css">
+     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
+    <header>
+        <h1>Bem Vindaa!</h1>
+        <a href="index.html"><span class="material-symbols-outlined">home</abbr></span></a>
+        <a href="página2.html"><span class="material-symbols-outlined">book_2</abbr></span></a>
+        <a href="pag3.html"><span class="material-symbols-outlined">library_books</abbr></span></a>
+    </header>
     <div>
         <h1>Textozinho</h1>
         <p>Às vezes eu me pego pensando em como o mundo parece diferente desde que você chegou. As cores ficaram mais vivas, os dias mais leves e até o silêncio ganhou um sentido novo — como se ele soubesse que é cheio de nós dois. <br>
         Gosto de como você transforma o simples em extraordinário. Um olhar vira abraço, um sorriso vira promessa, um toque vira abrigo. E, no meio de tudo isso, eu descubro que amar você é como respirar: acontece sem esforço, sem pressa, sem medo. <br>
         Se eu pudesse descrever o que sinto, diria que é paz misturada com arrepio; é saudade mesmo estando perto; é a certeza mais bonita que já tive. Porque, no fundo, meu coração encontrou no seu o lugar onde sempre quis morar.</p>
 
-        <p><a href="index.html">Volte</a></p>
+        <p><a id="a1" href="index.html">Volte</a></p>
     </div>
     
     
