--- a/Módulo 5/ex001/flex008/index.html
+++ b/Módulo 5/ex001/flex008/index.html
@@ -9,23 +9,25 @@
             background-color: lightsalmon;
 
             display: flex;
+            flex-flow: row wrap;
         }
         div.item {
             background-color: lightblue;
             border: 1px solid black;
-            flex: auto;
+            
             text-align: center;
+            flex-basis: 150px;
         }
     </style>
 </head>
 <body>
     <div class="conteiner">
         <div class="item">A</div>
-        <div class="item">B</div>
+        <div class="item">B Outro conteudo</div>
         <div class="item">C</div>
-        <div class="item">D</div>
+        <div class="item">D Outro maior ainda</div>
         <div class="item">E</div>
-        <div class="item">F</div>
+        <div class="item">F Esse então é gigante</div>
         <div class="item">G</div>
     </div>
 </body>
