--- a/Módulo 5/ex005/grid01/index copy.html
+++ b/Módulo 5/ex005/grid01/index copy.html
@@ -7,12 +7,12 @@
     <style>
         div.container {
             border: 3px solid blue;
-            height: 250px;
             display: grid;
             grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
+            grid-template-rows: 100px 100px 100px;
             gap: 5px;
-            
+            grid-auto-rows: 100px;
+            grid-auto-columns: 100px;
         }
 
         div.item {
@@ -29,6 +29,9 @@
         <div class="item">D</div>
         <div class="item">E</div>
         <div class="item">F</div>
+        <div class="item">G</div>
+        <div class="item">G</div>
+        <div class="item">G</div>
         <div class="item">G</div>
     </div>
 </body>
