--- a/Módulo 5/ex005/grid01/index.html
+++ b/Módulo 5/ex005/grid01/index.html
@@ -12,7 +12,10 @@
             grid-template-columns: auto auto auto;
             grid-template-rows: auto auto auto;
             gap: 5px;
-            
+            align-items: center;
+            align-content: center;
+            justify-items: center;
+            justify-content:space-evenly;
         }
 
         div.item {
