--- a/Módulo 5/ex005/grid02/index.html
+++ b/Módulo 5/ex005/grid02/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid</title>
     <style>
-        div.container {
+
+        .container {
             border: 3px solid blue;
-            height: 250px;
             display: grid;
-            grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
+            width: 1000px;
+
+            grid-template-columns: 100px 15% 1fr 2fr;
+            grid-template-rows: 100px 100px 100px;
             gap: 5px;
             
         }
 
-        div.item {
-            border: 3px solid red;
-            padding: 5px;
+        .item {
+           border: 3px solid red;
         }
     </style>
 </head>
@@ -27,9 +28,6 @@
         <div class="item">B</div>
         <div class="item">C</div>
         <div class="item">D</div>
-        <div class="item">E</div>
-        <div class="item">F</div>
-        <div class="item">G</div>
     </div>
 </body>
 </html>
