--- a/Módulo 5/ex004 grid/grid01/index.html
+++ b/Módulo 5/ex004 grid/grid01/index.html
@@ -18,6 +18,8 @@
         div.item {
             border: 3px solid red;
             padding: 5px;
+            background-color: white;
+            
         }
     </style>
 </head>
